Revision history for Dancer-Plugin-Catmandu-SRU

{{$NEXT}}

0.04  2014-11-28 14:03:30 CET
    - remove given/when

0.03  2014-05-08 12:25:30 CEST
    - build with Dist::Milla
    - docs
    - tests

0.02    2012-12-04
    - initial release