@@ -1,6 +1,8 @@
 Revision history for Dancer-Plugin-Catmandu-SRU
 
 {{$NEXT}}
+    - fix capping of limit
+    - return diagnostic if schema is missing
 
 0.04  2014-11-28 14:03:30 CET
     - remove given/when
